Dashboard alignment fix

--- a/public_html/wp-content/themes/daily-dish-pro/style-dashboard.css
+++ b/public_html/wp-content/themes/daily-dish-pro/style-dashboard.css
@@ -165,6 +165,7 @@ Recipe related things
 Other
 */
 
+.overview ul,
 .settings ul,
 .support ul,
 .further ul {
